--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/nglogo2.png" rel="icon">
-  <link href="assets/img/nglogo2.png" rel="apple-touch-icon">
+  <link href="assets/img/Neelgiri.png" rel="icon">
+  <link href="assets/img/Neelgiri.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -35,7 +35,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center">
-	  <img src="assets/img/nglogo2.png" height="100px" width="100px">	
+	  <img src="assets/img/Neelgiri.png" height="100px" width="100px">	
       <h1>Neelgiri - COMING SOON</h1>
       <h2>We're working hard to improve our website and we'll be ready to launch after</h2>
       <div class="countdown d-flex justify-content-center" data-count="2021/12/3">
