--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center">
-	  <img src="assets/img/Neelgiri.png" height="100px" width="100px">	
-      <h1>Neelgiri - COMING SOON</h1>
+	  <img src="assets/img/Neelgiri.png" height="150px" width="150px">	
+      <h1>COMING SOON</h1>
       <h2>We're working hard to improve our website and we'll be ready to launch after</h2>
-      <div class="countdown d-flex justify-content-center" data-count="2021/12/3">
+      <div class="countdown d-flex justify-content-center" data-count="2021/10/15">
         <div>
           <h3>%d</h3>
           <h4>Days</h4>
